@@ -19,6 +19,10 @@ GNU grep NEWS                                    -*- outline -*-
   grep -i -o would fail to report some matches; grep -i --color, while not
   missing any line containing a match, would fail to color some matches.
 
+  grep would fail to report a match in a multibyte character set other than
+  UTF-8, if another match occurred earlier in the line but started in the
+  middle of a multibyte character.
+
   Various bugs in grep -P, caused by expressions such as [^b] or \S matching
   newlines, were fixed.  grep -P also supports the special sequences \Z and
   \z, and can be combined with the command-line option -z to perform searches
